feat: address coderabbit suggestions